
Under development
=================

Features added
--------------

* Error logging in Schematron (requires libxml2 2.6.32 or later).

* Parser option ``strip_cdata`` for normalising or keeping CDATA
  sections.  Defaults to ``True`` as before, thus replacing CDATA
  sections by their text content.

* ``CDATA()`` factory to wrap string content as CDATA section.

Bugs fixed
----------

* Memory leak in Schematron with libxml2 >= 2.6.31.

* lxml.etree accepted non well-formed namespace prefix names.

Other changes
-------------

* New Elements created through the ``makeelement()`` method of an HTML
  parser or through lxml.html now end up in a new HTML document
  (doctype HTML 4.01 Transitional) instead of a generic XML document.
  This mostly impacts the serialisation and the availability of a DTD
  context.


2.0.4 (2008-04-13)
==================

Features added
--------------

Bugs fixed
----------

* Hanging thread in conjunction with GTK threading.

* Crash bug in iterparse when moving elements into other documents.

* HTML elements' ``.cssselect()`` method was broken.

* ``ElementTree.find*()`` didn't accept QName objects.

Other changes
-------------


2.1alpha1 (2008-03-27)
======================

Features added
--------------

* New event types 'comment' and 'pi' in ``iterparse()``.

* ``XSLTAccessControl`` instances have a property ``options`` that
  returns a dict of access configuration options.

* Constant instances ``DENY_ALL`` and ``DENY_WRITE`` on
  ``XSLTAccessControl`` class.

* Extension elements for XSLT (experimental!)

* ``Element.base`` property returns the xml:base or HTML base URL of
  an Element.

* ``docinfo.URL`` property is writable.

Bugs fixed
----------

* Default encoding for plain text serialisation was different from
  that of XML serialisation (UTF-8 instead of ASCII).

Other changes
-------------

* Minor API speed-ups.

* The benchmark suite now uses tail text in the trees, which makes the